--- a/index.html
+++ b/index.html
@@ -13,18 +13,37 @@
   <div id="loginOverlay" class="overlay"><div class="modal"><h2 class="text-xl font-semibold">Acceso Restringido</h2><p class="mt-2 text-gray-700">Ingrese su número de acceso:</p><input id="accessInput" type="password" placeholder="Número de acceso" /><button id="submitAccess" class="btn btn--primary btn--full">Enviar</button><p id="errorMsg" class="mt-2 text-red-500 hidden">Número incorrecto.</p></div></div>
   <div id="confirmOverlay" class="overlay hidden"><div id="confirmBox" class="modal confirm"><p id="confirmMsg">¿Confirmar?</p><button id="confirmOk" class="btn btn--primary">Aceptar</button><button id="confirmCancel" class="btn btn--secondary">Cancelar</button></div></div>
   <div id="deleteOverlay" class="overlay hidden"><div class="modal deleteKey"><h2 class="text-xl font-semibold">Clave de Eliminación</h2><p class="mt-2 text-gray-700">Ingrese la clave para eliminar:</p><input id="deleteKeyInput" type="password" placeholder="Clave de borrado" class="mt-2 w-full border rounded px-3 py-2" /><p id="deleteKeyError" class="mt-2 text-red-500 hidden">Clave incorrecta.</p><button id="deleteKeyOk" class="btn btn--primary btn--full">Enviar</button><button id="deleteKeyCancel" class="btn btn--secondary btn--full">Cancelar</button></div></div>
+  
+  <div id="highlightConfirmOverlay" class="overlay hidden">
+    <div id="highlightConfirmBox" class="modal">
+      <h2 class="text-xl font-semibold">Confirmar Resaltado</h2>
+      <div id="highlightConfirmContent" class="text-left my-4 space-y-3">
+        <p>Se resaltarán los siguientes códigos en el documento:</p>
+        <div class="p-2 bg-gray-100 rounded border">
+          <p class="font-semibold text-lg" id="highlightConfirmDocName"></p>
+          <p class="text-sm text-gray-600" id="highlightConfirmPdfPath"></p>
+        </div>
+        <pre id="highlightConfirmCodes" class="mt-2 p-2 bg-gray-100 rounded border max-h-32 overflow-auto whitespace-pre-wrap"></pre>
+      </div>
+      <div class="flex gap-4">
+        <button id="highlightConfirmOk" class="btn btn--primary btn--flex1 text-lg">¿Quieres resaltar este doc?</button>
+        <button id="highlightConfirmCancel" class="btn btn--secondary btn--flex1 text-lg">Cancelar</button>
+      </div>
+    </div>
+  </div>
+
   <div id="highlightResultOverlay" class="overlay hidden"><div id="highlightResultBox" class="modal"><h2 class="text-xl font-semibold">Resultado del Resaltado</h2><div id="highlightResultContent" class="text-left my-4"></div><button id="highlightResultClose" class="btn btn--secondary btn--full">Cerrar</button></div></div>
   <div id="toast-container"></div>
 
   <div id="mainContent" class="w-full max-w-4xl bg-white rounded-2xl shadow-lg hidden">
-    <div class="bg-white border-b flex items-center justify-center py-4"><img id="appLogo" src="" alt="Logo" class="h-10 mr-4 hidden"><h1 id="appHeaderTitle" class="text-2xl font-bold text-center"></h1></div>
+    <header class="bg-white border-b flex items-center justify-center py-4"><img id="appLogo" src="" alt="Logo" class="h-10 mr-4 hidden"><h1 id="appHeaderTitle" class="text-2xl font-bold text-center"></h1></header>
     <nav class="border-b bg-white shadow-sm"><ul id="tabs" class="flex"><li class="tab flex-1 text-center cursor-pointer px-6 py-4 active" data-tab="tab-search">Buscar</li><li class="tab flex-1 text-center cursor-pointer px-6 py-4" data-tab="tab-upload">Subir</li><li class="tab flex-1 text-center cursor-pointer px-6 py-4" data-tab="tab-list">Consultar</li><li class="tab flex-1 text-center cursor-pointer px-6 py-4" data-tab="tab-code">Búsqueda por Código</li></ul></nav>
-    <div class="p-6 space-y-6">
+    <main class="p-6 space-y-6">
       <div id="tab-search" class="tab-content"><h2 class="text-xl font-semibold mb-4">Búsqueda Inteligente</h2><textarea id="searchInput" rows="6" class="w-full border rounded px-3 py-2 text-lg mb-4" placeholder="Pega aquí tus códigos..."></textarea><div class="flex gap-4 mb-4"><button onclick="doSearch()" class="btn btn--primary btn--flex1 text-lg">Buscar</button><button onclick="clearSearch()" class="btn btn--secondary btn--flex1 text-lg">Limpiar</button></div><div id="search-alert" class="text-red-600 font-medium text-lg mb-4"></div><div id="results-search" class="space-y-4"></div></div>
       <div id="tab-upload" class="tab-content hidden"><h2 class="text-xl font-semibold mb-4">Subir / Editar Documento</h2><form id="form-upload" enctype="multipart/form-data" class="space-y-4"><input id="docId" type="hidden" name="id" /><div><label class="block mb-1 text-lg">Nombre</label><input id="name" name="name" type="text" required class="w-full border rounded px-3 py-2 text-lg"/></div><div><label class="block mb-1 text-lg">Fecha</label><input id="date" name="date" type="date" required class="w-full border rounded px-3 py-2 text-lg"/></div><div><label class="block mb-1 text-lg">PDF o Documento</label><input id="file" name="file" type="file" accept="application/pdf,image/*" class="w-full text-lg"/><p id="uploadWarning" class="mt-1 text-red-600 text-sm hidden">El archivo excede los 10 MB.</p></div><div><label class="block mb-1 text-lg">Códigos</label><textarea id="codes" name="codes" rows="4" class="w-full border rounded px-3 py-2 text-lg"></textarea></div><button type="submit" class="btn btn--primary btn--full text-lg">Guardar</button></form></div>
       <div id="tab-list" class="tab-content hidden"><h2 class="text-xl font-semibold mb-4">Consultar Documentos</h2><div class="flex gap-4 mb-4"><input id="consultFilterInput" type="text" class="flex-1 border rounded px-3 py-2 text-lg" placeholder="Filtrar por nombre o PDF" oninput="doConsultFilter()" /><button onclick="clearConsultFilter()" class="btn btn--secondary text-lg">Limpiar</button><button onclick="downloadCsv()" class="btn btn--primary text-lg">Descargar CSV</button><button onclick="downloadPdfs()" class="btn btn--dark text-lg">Descargar PDFs</button></div><div id="results-list" class="space-y-4"></div></div>
       <div id="tab-code" class="tab-content hidden"><h2 class="text-xl font-semibold mb-4">Búsqueda por Código</h2><div class="relative mb-4"><input id="codeInput" type="text" class="w-full border rounded px-3 py-2 text-lg" placeholder="Código (ej: ABC123)" autocomplete="off" /><div id="suggestions" class="absolute top-full left-0 right-0 bg-white border rounded-b px-2 shadow max-h-48 overflow-auto hidden z-20"></div></div><button onclick="doCodeSearch()" class="btn btn--primary btn--full mb-4 text-lg">Buscar por Código</button><div id="results-code" class="space-y-4"></div></div>
-    </div>
+    </main>
   </div>
   <script src="script.js" defer></script>
 </body>
