--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
       <div id="tab-code" class="tab-content hidden"><h2 class="text-xl font-semibold mb-4">Búsqueda por Código</h2><div class="relative mb-4"><input id="codeInput" type="text" class="w-full border rounded px-3 py-2 text-lg" placeholder="Código (ej: ABC123)" autocomplete="off" /><div id="suggestions" class="absolute top-full left-0 right-0 bg-white border rounded-b px-2 shadow max-h-48 overflow-auto hidden z-20"></div></div><button onclick="doCodeSearch()" class="btn btn--primary btn--full mb-4 text-lg">Buscar por Código</button><div id="results-code" class="space-y-4"></div></div>
     </main>
   </div>
-  <script src="script.js" defer></script>
+  <script src="script.js?v=5.1" defer></script>
 </body>
 </html>
